Update Groq API integration and configuration
Refined API endpoints to handle plain text, updated default model to "meta-llama/llama-4-scout-17b-16e-instruct," and improved exception handling with detailed error messages. Enhanced mapping of JSON fields using annotations, adjusted Hibernate configuration, and added logging for outgoing requests to Groq API. Updated `.gitignore` and aligned Groq API service with the new model specifications.